# bloomy

./: Cargo.toml  LICENSE  README.md
benches/: benchmarks.rs
examples/: simple.rs
src/: bitvec.rs  bloom.rs  lib.rs
